Fix nav pills color contrast.

--- a/prereq_map/static/prereq_map/css/base.scss
+++ b/prereq_map/static/prereq_map/css/base.scss
@@ -105,6 +105,11 @@ body {
   height: 7.5rem;
 }
 
+.prereq-banner .nav-pills {
+  a { color: #ccc; }
+}
+
+
 .logo-position {
   left: 1.25rem;
   position: absolute;
